Fixes z-index of the navbar in <800px screens

--- a/src/SourceBrowser.Site/Content/Site.css
+++ b/src/SourceBrowser.Site/Content/Site.css
@@ -100,6 +100,11 @@ textarea {
     background:#DDD;
 }
 
+/* Modifications to the metro CSS */
+.metro .navigation-bar {
+    z-index: 10;
+}
+
 /* Browse layout with source in one pane and treeview/search in another: */
 #sb-viewhost {
     top: 45px;
